assets/sass/_presentation.scss
/* ... */
// FEATURED COMMUNITY MEMBERS
.featured-members .member {
  .content-comments {
    width: 100%;
    li {
      float: none;
      border: 0;
    }
  }
  .stats {
    float: right;
    li {
      font-size: 12px;
    }
    p {
      margin-bottom: .3em;
    }
  }
  .info ul {
    margin: .3em 0;
  }
}

.span3, .span4, .span6 {
  .member {
    @include col_layout( ( 50, 100 ), 10 );
    margin-top: 1em;
    &:first-child {
      margin-top: 0;
    }
  }
}

.span8, .span9, .span12 {
  .featured-members .content-body {
    & > * {
      width: 29.9%;
      float: left;
      padding: 0 1.6%;
    }
    .member {
      border-left: 1px solid sears( decorative );
      &:first-child {
        border-left: 0;
      }
      @include col_layout( ( 50, 50 ), 5 );
    }
    @include legacy-pie-clearfix;
    .stats {
      float: none;
      clear: left;
      width: 100%;
    }
  }
}
// Alternate selector for below class. Use if override for more scenarios is required.
// Also, more like these would have to be created on a per-widget basis if development is asked to create more override states.
//.span3 .featured-members, .span4 .featured-members, .span6 .featured-members,
//.span3.featured-members, .span4.featured-members, .span6.featured-members, .span8.featured-members

.span3 .featured-members, .span4 .featured-members, .span6 .featured-members {
  .span4 {
    float: none;
    width: 100%;
    margin-left: 0;
    margin-bottom: 1em;
    .member {
      border-right: 0;
      @include col_layout( (80, 210), 10 );
    }
  }
}

// FEATURED QUESTION
.featured-question.content-container {
  .category-image {
    background:transparent url(#{$img}category-image.jpg) no-repeat 0px 0px;
    float:left;
    height:6.25em;
    margin:0 .625em .625em 0;
    width:6.25em;
  }

  $column-width: nth( $span-widths, 4 );
  $calculated-widths: ratioize( ($column-width, $column-width, 10) );
  &.columns {
    .content-body {
      & > * {
        float: left;
        width: nth( $calculated-widths, 1 );
        & + * {
          margin-left: nth( $calculated-widths, 3 );
        }
      }
    }
    .featured:nth-child(odd) .column {
      border-right: 1px solid sears( decorative );
      padding-right: nth( $calculated-widths, 3 );
    }
    .content-date {
      float: none;
    }
    .content-headline {
      font-size: 90%;
    }
  }
}

.span4, .span3 {
  .featured-question.content-container.columns .content-body > * {
    float: none;
    width: 100%;
    margin-left: 0;
  }
}
.span4, .span3 {
  .featured-question.content-container.columns .featured {
    margin-bottom: .75em;
    &:nth-child(odd) .column {
      border-right: 0;
      padding-right: 0;
    }
  }
}

// RESULT LIST
.result-list {
  margin-top: 1em;
  border: 1px solid sears( decorative );
  @include border-radius( 5px );
  .content-header {
    width: 95%;
    margin-left: auto;
    margin-right: auto;
  }
  .lone-result {
    padding-top: .75em;
    margin-top: .5em;
    border-top: 1px solid sears( decorative );
    &:first-child {
      margin-top: 0;
      border-top: 0;
    }
  }
  .content-header {
    border-top: 0;
    font-size: percentage( 12/16 );
    padding-top: 1.5em;
    padding-bottom: 1.5em;
  }
}

.member .info .content-comments {
  font-size: 100%;
  li {
    float: none;
    border: 0;
    margin-top: 0;
  }
}

// FEATURED BLOG POST
.content-container.featured-post {
  .content-excerpt, .content-byline {
    font-size:.75em
  }
}
.span4 .content-container.featured-post .span6 {
  width: 100%;
  margin-left: 0;
}

// RECENT ACTIVITY
.recent-activity {
  li {
    margin-top: 1em;
    border-top: 1px solid sears( decorative );
    padding-top: .75em;
    padding-bottom: .75em;
    font-size: percentage( 12/16 );
    line-height: 1.7;
    &:first-child {
      margin-top: 0;
      border-top: 0;
    }
  }
  time {
    float: right;
    @extend .faint;
  }
  h3 {
    a {
      font-weight: bold;
    }
    & > * {
      display: block;
    }
  }
  .excerpt {
    padding: .3em 1em;
    color: $darkest-color;
    background: sears( content-focus );
    // create quotes around a comment
    &:before {
      // left quote
      content: "\201C";
    }
    &:after {
      // right quote
      content: "\201D";
    }
  }
  .category {
    font-size: 90%;
    padding-top: .2em;
  }
}

/*
 * POST A QUESTION
 */

.content-container.post-your-question {
  form {
    margin-top:.75em;
    .state_post-your-question {
      .input_text {
        width:83%;
      }
    }
    .state_post-question-details {
      .input_text {
        width:98%;
      }
      .input_textarea {
        width:98%;
      }
    }
    .state_confirm-post {
      .confirmation {
        padding:.625em;
      }
      .content-headline {
        color:#666666;
        font-size:1.25em;
        margin-bottom:.30em;
      }
    }
  }
}

/*
 * LOGIN/REGISTER/FORGOT PASSWORD
 */
#moodle_container .sign-in, body > .sign-in,
#moodle_container .register, body > .register {
  padding:20px;
}

.form_login, .form_register {
  .input_text {
    width:100%;
  }
  label, a {
    line-height:32px;
  }
  label {
    text-align:right;
  }
  .forgot {
    font-size: .6875em;
  }
  .form-fields > li p {
    margin-bottom:0;
  }
}
fieldset#use_your_account_from {
    border-top: 1px solid sears( decorative );
  legend {
    text-align: center;
    padding: 1em;
  }
}
/* ... */

